--- a/meu-site/listados.css
+++ b/meu-site/listados.css
@@ -136,6 +136,10 @@ main > ul{
     text-align: left;
     margin-left: 40px;
 }
+ul#atualizacoes{
+    text-align: left;
+    margin-left: 30px;
+}
 .video{
     position: relative;
     padding-bottom: 59%;
