imagem de fundo

--- a/meu-site/listados.css
+++ b/meu-site/listados.css
@@ -43,6 +43,11 @@ strong{
 body{
     font: normal 1.1em Arial, Helvetica, sans-serif;
     background-color: rgb(184, 236, 173);
+    background-image: url('imagens/background-ferdinand-full.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 abbr{
     text-decoration: none;
@@ -112,7 +117,9 @@ main{
     text-align: center;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    margin-bottom: 300px;
 }
+
 main > h1{
     font-family: 'Stardos Stencil', cursive;
     color: var(--cor4);
