--- a/meu-site/listados.css
+++ b/meu-site/listados.css
@@ -31,6 +31,7 @@
     --cor3:#9FFF48;
     --cor4:#598530;
     --cor5:#698054;
+    --cor6:#66aa27;
 }
 *{
     margin: 0px;
@@ -99,6 +100,15 @@ h2{
     margin-left: 30px;
     margin-top: 10px;
 }
+main h3{
+    text-align: left;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    color: var(--cor6);
+    font-size: 1.3em;
+}
 article.selects{
     background-color: var(--cor2);
     padding: 15px;
@@ -154,6 +164,9 @@ main > ul{
 ul#atualizacoes{
     text-align: left;
     margin-left: 30px;
+}
+li{
+    margin-bottom: 20px;
 }
 .video{
     position: relative;
