--- a/desafios/desafio017/estilos/mobile.css
+++ b/desafios/desafio017/estilos/mobile.css
@@ -3,6 +3,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 :root{
     --cor1: white;
@@ -21,24 +22,29 @@ main{
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 280px;
+    width: 290px;
     transform: translate(-50%, -50%);
     background-color: var(--cor1);
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.233);
+    overflow: hidden;
+    transition: 0.3s;
+    transition-timing-function: ease;
 }
-main > h1{
+main > section#form > h1{
     text-align: center;
-    padding-bottom: 5px;
     padding-top: 5px;
     font-family: var(--fonte-h1);
     margin-top: -10px;
+    font-size: 2em;
 }
-main > p{
-    padding-left: 15px;
-    padding-right: 15px;
+main > section#form > p{
+    margin-bottom: 8px;
     text-align: justify;
+    padding-left: 10px;
+    padding-right: 10px;
 }
+
 main > form{
     padding: 10px;
 }
@@ -55,8 +61,8 @@ p.input > img{
     margin-top: 4px;
 }
 p.input > input{
-    width: 195px;
-    height: 25px;
+    width: 215px;
+    height: 35px;
     border-radius: 10px;
     border: 1px solid white;
     position: absolute;
@@ -65,16 +71,17 @@ p.input > input{
     transform: translate(-40%, -50%);
     padding: 5px;
 }
-main > div#img{
+section#img div#img{
     background: white url('../imagens/pattern.jpg') center center no-repeat fixed;
     background-size: cover;
-    height: 160px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    height: 170px;
+}
+main > section#form{
+    padding: 10px;
 }
 p.pbut{
     text-align: center;
-    padding-top: 5px;
+    margin-bottom: 5px;
 }
 .button{
     width: 260px;
