--- a/desafios/desafio015/estilo/desafio015.css
+++ b/desafios/desafio015/estilo/desafio015.css
@@ -8,7 +8,7 @@ html, body{
     width: 100vw;
 }
 body{
-    background: rgb(172, 112, 33) url('../pacote-d013/imagens/fundo-madeira.jpg') center center no-repeat fixed;
+    background: rgb(172, 112, 33) url('../imagens/pacote-d013/imagens/fundo-madeira-1000.jpg') center center no-repeat fixed;
     background-size: cover;
 }
 
@@ -25,7 +25,7 @@ section#cel{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: transparent url('../pacote-d013/imagens/frame-iphone.png') center center no-repeat fixed;
+    background: transparent url('../imagens/pacote-d013/imagens/frame-iphone.png') center center no-repeat fixed;
     height: 627px;
     width: 311px;
 }
@@ -43,6 +43,7 @@ iframe{
     border-radius: 50px;
     width: 60px;
     margin-bottom: 5px;
+    display: block;
 }
 img:hover{
     transform: translate(-3px, -3px);
