--- a/meu-site/listados.css
+++ b/meu-site/listados.css
@@ -1,28 +1,8 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Stardos+Stencil:wght@400;700&display=swap');
-@media screen and (max-width: 540px){
-    p.img{
-        max-width: 300px;
-    }
-}
-@media screen and (min-width: 540px){
-    p.img{
-        max-width: 500px;
-    }
-}
 @media (max-width: 480px){
     body{
         background-image: none;
-    }
-}
-@media (min-width: 481px) and (max-width: 1024px){
-    body{
-        background-image: url('imagens/background-ferdinand-1000.jpg');
-    }
-}
-@media (min-width: 1025px){
-    body{
-        background-image: url('imagens/background-ferdinand-full.jpg');
     }
 }
 :root{
@@ -57,6 +37,7 @@ body{
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
+    background-image: url('imagens/background-ferdinand-1000.jpg');
 }
 abbr{
     text-decoration: none;
@@ -135,7 +116,7 @@ main{
     padding: 20px;
     max-width: 850px;
     margin: auto;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.26);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.26);
     text-align: center;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -160,6 +141,7 @@ p.img{
     font-family: 'Courier New', Courier, monospace;
     margin: -6px auto;
     background-color: lightgray;
+    width: 500px;
 }
 main > ul{
     text-align: left;
