--- a/login/estilo/outros.css
+++ b/login/estilo/outros.css
@@ -42,3 +42,32 @@
         font-size: 1.1em;
     }
 }
+@media screen and (orientation: landscape) and (max-width: 768px) {
+    body{
+        font-size: 0.9em;
+    }
+    main{
+        padding-top: 20px;
+    }
+    h1{
+        font-size: 1.9em;
+    }
+    p.form img{
+        width: 35px;
+        transform: translate(0px, 11px);
+    }
+    input#iemail{
+        height: 35px;
+    }
+    input#ipass{
+        height: 35px;
+    }
+    input#entrar{
+        height: 35px;
+        width: 96%;
+    }
+    input#esqueceu{
+        height: 35px;
+        width: 96%;
+    }
+}
